--- a/public/404.html
+++ b/public/404.html
@@ -28,8 +28,8 @@
   
   
   
-  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.1b587528b4b8613cb7c46a18cb8cbd8928dbc909f1f452fbf60fad809d04568028cbc72e818ba27e9ea1c235d4f2d69674574b9531fdf20cba10a74e95b1bb7d.css"
-    integrity="sha512-G1h1KLS4YTy3xGoYy4y9iSjbyQnx9FL79g&#43;tgJ0EVoAoy8cugYuifp6hwjXU8taWdFdLlTH98gy6EKdOlbG7fQ==" />
+  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.3f38324cfa1f4de049c34b2db172db12b2324b99dac4e0c4048079e8cacac2ab11f615cb9cdb4018778246b3f9a17312c14bc8ec1d0b6b5dece9ec95e5f43907.css"
+    integrity="sha512-PzgyTPofTeBJw0stsXLbErIyS5naxODEBIB56MrKwqsR9hXLnNtAGHeCRrP5oXMSwUvI7B0La13s6eyV5fQ5Bw==" />
   
   
   <script type="text/javascript" src="/js/appearance.min.516a16745bea5a9bd011138d254cc0fd3973cd55ce6e15f3dec763e7c7c2c7448f8fe7b54cca811cb821b0c7e12cd161caace1dd794ac3d34d40937cbcc9ee12.js"
