homepage;fonts;cdklanugage;friendlink

--- a/public/404.html
+++ b/public/404.html
@@ -42,8 +42,8 @@
   <link
     type="text/css"
     rel="stylesheet"
-    href="/css/main.bundle.min.a5ba50828dc86897b7a1f81e819464cdd1f1a5cbb9f120872f66cdf7eebd1a7bcb0cfaab93df944680917eb403c7122d911513e4c7c8caf924eac5053c91b058.css"
-    integrity="sha512-pbpQgo3IaJe3ofgegZRkzdHxpcu58SCHL2bN9&#43;69GnvLDPqrk9&#43;URoCRfrQDxxItkRUT5MfIyvkk6sUFPJGwWA==">
+    href="/css/main.bundle.min.dbd58b6d25254ce56926bc41b497e3fba3e73e3f8d81f0c5b1eef212254e14f262dbe63ad93ad0d5e7ff1c3d822c26545b3b5d5fa1a21f5340a6385d7e812dff.css"
+    integrity="sha512-29WLbSUlTOVpJrxBtJfj&#43;6PnPj&#43;NgfDFse7yEiVOFPJi2&#43;Y62TrQ1ef/HD2CLCZUWztdX6GiH1NApjhdfoEt/w==">
 
   
   
@@ -203,8 +203,10 @@
   
 </head>
 <body
-    class="flex flex-col h-screen px-6 m-auto text-lg leading-7 max-w-7xl bg-neutral text-neutral-900 dark:bg-neutral-800 dark:text-neutral sm:px-14 md:px-24 lg:px-32 scrollbar-thin scrollbar-track-neutral-200 scrollbar-thumb-neutral-400 dark:scrollbar-track-neutral-800 dark:scrollbar-thumb-neutral-600">
-    <div id="the-top" class="absolute flex self-center">
+  class='flex flex-col h-screen px-6 m-auto text-lg leading-7 max-w-7xl bg-neutral text-neutral-900 dark:bg-neutral-800 dark:text-neutral sm:px-14 md:px-24 lg:px-32 scrollbar-thin scrollbar-track-neutral-200 scrollbar-thumb-neutral-400 dark:scrollbar-track-neutral-800 dark:scrollbar-thumb-neutral-600
+     kind-404
+    '>
+    <div id="the-top" class="absolute aflex self-center">
       <a
         class="px-3 py-1 text-sm -translate-y-8 rounded-b-lg bg-primary-200 focus:translate-y-0 dark:bg-neutral-600"
         href="#main-content">
